# PyUVS-junk

./: .gitignore  CITATION.cff  MANIFEST.in  README.rst  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  documentation.yaml  feature_request.yaml
.github/workflows/: main.yaml
docs/: .buildinfo  genindex.html  index.html  notes.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  notes.doctree
docs/.doctrees/rst/: about-iuvs.doctree  about-pyuvs.doctree  installation.doctree  release-notes.doctree
docs/_downloads/3ad4a6ccd92cfda578d5bee8cfc8c3bd/: plot_sensitivity_curves.py
docs/_downloads/df38dac58a2a8fe79e12436888ed560d/: plot_sensitivity_curves.ipynb
docs/_modules/: index.html
docs/_modules/pyuvs/: anc.html  calibration.html  data_files.html  spice.html
docs/_sources/: index.rst.txt  notes.rst.txt
docs/_sources/rst/: about-iuvs.rst.txt  about-pyuvs.rst.txt  installation.rst.txt  release-notes.rst.txt
docs/rst/: about-iuvs.html  about-pyuvs.html  installation.html  release-notes.html
docs/rst/api-reference/: anc.html  calibration.html  constants.html  (+3 more)
documentation-source/: conf.py  index.rst
documentation-source/rst/: about-iuvs.rst  installation.rst  release-notes.rst
examples/: README.rst
products/: apoapse_muv_detector_image.py
products/data/: _fits.py  data_files.py
pyuvs/: __init__.py  _graphics.py  anc.py  calibration.py  constants.py  data_files.py  spice.py  swath.py
pyuvs/tests/: test_calibration.py  test_data_files.py
(+38 files in other folders)
