[metadata]
name = pyuvs
version = 0.0.1
author = Kyle Connour and Zachariah Milby
home_page = https://github.com/kconnour/PyUVS
description = A library that makes working with MAVEN/IUVS data sucks less hard. It is the ultimate.

[options]
include_package_data = True
python_requires = >= 3.10
packages = find:
install_requires =
   astropy
   lmfit
   numpy
   spiceypy
   statsmodels

[options.extras_require]
all =
   Cartopy
   Sphinx
   matplotlib
   pydata-sphinx-theme
   pytest
   sphinx-gallery

docs =
   Sphinx
   matplotlib
   pydata-sphinx-theme
   sphinx-gallery

graphics =
   Cartopy
   matplotlib

test =
   pytest
